# x26

./: README.md  pyproject.toml
hexray25/: __init__.py  coco_ds.py  coco_schema.py  coco_utils.py  metrics.py  utils.py
hexray25/callbacks/: __init__.py
hexray25/configs/: all_defects_v32.py  all_defects_v34.py  bg.py  dataset_config.py  fmmd_v32.py  fmmd_v34.py  training_params.py  vjt.py  vjt_bg_train.py  vjt_v32_all_defect.py  vjt_v34_all_defect.py  weight_encryptor.py
hexray25/datasets/: __init__.py  vjt.py
hexray25/encryption/: __init__.py  aes.py  aes_key.md  encryptor_decryptor.py  rsa.py  rsa_key_private.pem  rsa_key_public.pem  signature.txt
hexray25/inference_engine/: all_defects_model.py  bg_model.py  fmmd_model.py  utils.py
hexray25/models/: __init__.py  resnet18.py  upernet.py
hexray25/registries/: __init__.py  base.py  callbacks.py  datasets.py  models.py  runners.py  transforms.py
hexray25/runners/: base_trainer.py  dataset_creator_vjt.py  setup_encryption.py  weight_encryptor_decryptor.py
hexray25/transforms/: __init__.py  imagenet.py  vjt_seg.py
hexray25_train/: DEFECTS_TRAIN.md  PARTS_TRAIN.md  create_ds_defects.ipynb  parts_train_val_test.ipynb  train_parts.py  train_v32_all_defect.py  train_v34_all_defect.py  train_val_test.ipynb
hexray25_train/ds/ds1/: test.txt  test_fmmd.txt  train.txt  train_fmmd.txt
hexray25_train/ds/ds2/: test.txt  test_fmmd.txt  train.txt  train_all.txt  train_fmmd.txt
hexray25_train/ds/ds3/: test.txt  test_fmmd.txt  train.txt  train_fmmd.txt
hexray25_train/ds/ds4/: test.txt  test_all.txt  test_fmmd.txt  train.txt  train_all.txt  train_fmmd.txt
hexray25_train/ds/parts/: test.txt  train.txt
