[project]
name = "hexray25"
version = "0.1.0"
description = "Hexray25 project"
requires-python = "==3.12.*"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pre-commit>=4.2.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "awscli>=1.35.10",
    "pandas>=2.2.3",
    "tqdm>=4.66.5",
    "fastcore>=1.7.19",
    "pycocotools>=2.0.8",
    "scikit-learn>=1.5.2",
    "lightning>=2.4.0",
    "transformers>=4.45.2",
    "prefetch-generator>=1.0.3",
    "pytorch-toolbelt>=0.6.3",
    "wandb>=0.18.5",
    "monai>=1.4.0",
    "albumentations>=1.4.21",
    "timm>=1.0.13",
    "cryptography>=44.0.1",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "mdutils>=1.6.0",
    "pandoc>=2.4",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 18

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.setuptools]
packages = ["hexray25"]
package-dir = {"" = "."}
